# ScreenRecorder

./: README.md
ScreenRecorderApp/: CMakeLists.txt  appManager.cpp  main.cpp  videoRecorder.cpp
